# DistSystemsProject

./: package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentification.py  users.py
backend/app/model/: mixins.py  person.py  role.py  user_role.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  role.py  user_role.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: b1d86e4c800b_new_database.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Home.jsx  main.jsx
frontend/src/components/: Forgot.jsx  Login.jsx  Register.jsx
